# BEI_EasyMile

./: Classeur1.xlsx  README.md  Simulation boucle ouverte.py  Simulation boucle ouverte_vf2.py  Simulation boucle ouverte_vf4.py  allocation_3.py  allocators.py
BEI_Easy_Mile/: README.md
Modélisation Moteur/: MODELISATION_MOTEUR.py  VehicleSpeed_StepResponse-1.xlsx  untitled1.slx  (+1 more)
vehicle_sim_pkg/: README.md  fix_csv.py  pyproject.toml  settings.json
vehicle_sim_pkg/data/: Données BEI 2025.xlsx  Motor_StepResponse-1.xlsx  efficiency_map_clean.csv  engine_carac.csv  vitesseclasseurvehicule.csv
vehicle_sim_pkg/data/raw/: data_map_C_V_cos(phi).csv
vehicle_sim_pkg/data/scenarios/: nominal_driving_10kmh_unloaded.csv  nominal_driving_5kmh_unloaded.csv
vehicle_sim_pkg/examples/: comparaison_blocs_allocation.py  run_boucle_fermee.py  run_boucle_ouverte.py  run_custom_profile.py  run_sim.py  run_validation.py  test_cosphi_alloc.py  test_unit_engine.py  test_unit_vehicle.py
vehicle_sim_pkg/src/vehicle_sim/: README.md  __init__.py  config.py  efficiency.py  simulation.py  simulation_open_loop.py  vehicle.py
vehicle_sim_pkg/src/vehicle_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vehicle_sim_pkg/src/vehicle_sim/control/: __init__.py  allocation.py  allocations.py  controllers.py
vehicle_sim_pkg/src/vehicle_sim/data_processing/: mapping_cosphi.py
vehicle_sim_pkg/src/vehicle_sim/models/: __init__.py  engine.py  vehicle.py
vehicle_sim_pkg/src/vehicle_sim/tests/: test_allocation_smooth.py
vehicle_sim_pkg/src/vehicle_sim/utils/: __init__.py  data_loader.py
(+65 files in other folders)
