[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle_sim"
version = "0.1.0"
description = "Simulation EZDolly : 4-wheel vehicle simulation with torque vectoring"
authors = [{name = "Amine", email = "amine@example.com"}]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "openpyxl"
]